Fix/Card overflow

--- a/scss/_card.scss
+++ b/scss/_card.scss
@@ -9,8 +9,3 @@
   margin-left: -20px;
   margin-right: -20px;
 }
-
-// Fix the overflow of a table header located at the top of a card.
-.card {
-  overflow: hidden;
-}
